[gd_scene load_steps=9 format=3 uid="uid://ct0nja1st1e30"]

[ext_resource type="Theme" uid="uid://b2yw3qprwvxry" path="res://assets/theme/base_theme.tres" id="1_k5tr2"]
[ext_resource type="Script" path="res://scripts/options_screen.gd" id="2_c2oa8"]
[ext_resource type="Script" path="res://scripts/type_select.gd" id="4_sabhx"]
[ext_resource type="Script" path="res://scripts/amount_value.gd" id="5_qtfqs"]
[ext_resource type="Script" path="res://scripts/game_value.gd" id="6_66mor"]
[ext_resource type="Script" path="res://scripts/interval_value.gd" id="6_pybdy"]
[ext_resource type="Script" path="res://scripts/options_play_button.gd" id="7_0hkdj"]
[ext_resource type="PackedScene" uid="uid://bv557pno68fqy" path="res://scenes/screen_button.tscn" id="7_f5ueo"]

[node name="OptionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k5tr2")
script = ExtResource("2_c2oa8")

[node name="BGColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.117647, 0.14902, 1)

[node name="TypeSelect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
region_rect = Rect2(192, 192, 64, 64)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource("4_sabhx")

[node name="ScrollContainer" type="ScrollContainer" parent="TypeSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -393.0
offset_top = -211.0
offset_right = -55.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
scroll_deadzone = 5

[node name="VBoxContainer" type="VBoxContainer" parent="TypeSelect/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="ItemList" type="ItemList" parent="TypeSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = 17.0
offset_right = -56.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
allow_search = false

[node name="Sliders" type="Control" parent="TypeSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -199.0
offset_right = 422.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSliderAmount" type="HSlider" parent="TypeSelect/Sliders"]
layout_mode = 0
offset_left = 40.0
offset_top = 14.0
offset_right = 382.0
offset_bottom = 67.0
min_value = 1.0
max_value = 10.0
value = 5.0

[node name="LabelAmount" type="Label" parent="TypeSelect/Sliders/HSliderAmount"]
layout_mode = 0
offset_left = 12.0
offset_top = -27.0
offset_right = 279.0
offset_bottom = -4.0
text = "Oefeningen per type"

[node name="AmountValue" type="Label" parent="TypeSelect/Sliders/HSliderAmount"]
layout_mode = 0
offset_left = 5.0
offset_top = 40.0
offset_right = 45.0
offset_bottom = 63.0
script = ExtResource("5_qtfqs")

[node name="HSliderInterval" type="HSlider" parent="TypeSelect/Sliders"]
layout_mode = 0
offset_left = 40.0
offset_top = 110.0
offset_right = 385.0
offset_bottom = 164.0
min_value = 1.0
max_value = 20.0
value = 5.0

[node name="LabelInterval" type="Label" parent="TypeSelect/Sliders/HSliderInterval"]
layout_mode = 0
offset_left = 12.0
offset_top = -27.0
offset_right = 279.0
offset_bottom = -4.0
text = "Oefeningen per spel"

[node name="IntervalValue" type="Label" parent="TypeSelect/Sliders/HSliderInterval"]
layout_mode = 0
offset_left = 5.0
offset_top = 40.0
offset_right = 45.0
offset_bottom = 63.0
script = ExtResource("6_pybdy")

[node name="HSliderGame" type="HSlider" parent="TypeSelect/Sliders"]
layout_mode = 0
offset_left = 40.0
offset_top = 206.0
offset_right = 385.0
offset_bottom = 260.0
max_value = 2.0

[node name="LabelGame" type="Label" parent="TypeSelect/Sliders/HSliderGame"]
layout_mode = 0
offset_left = 12.0
offset_top = -27.0
offset_right = 209.0
offset_bottom = -5.0
text = "Spel keuze"

[node name="GameValue" type="Label" parent="TypeSelect/Sliders/HSliderGame"]
layout_mode = 0
offset_left = 5.0
offset_top = 40.0
offset_right = 89.0
offset_bottom = 62.0
text = "de bom"
script = ExtResource("6_66mor")

[node name="Button" type="Button" parent="TypeSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 104.0
offset_top = 101.0
offset_right = 326.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "start"

[node name="OptionsPlay" parent="TypeSelect" instance=ExtResource("7_f5ueo")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 104.0
offset_top = 101.0
offset_right = 326.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_0hkdj")

[node name="Label" type="Label" parent="TypeSelect/OptionsPlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "start
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="TypeSelect/Sliders/HSliderAmount" to="TypeSelect/Sliders/HSliderAmount/AmountValue" method="_on_h_slider_amount_value_changed"]
[connection signal="value_changed" from="TypeSelect/Sliders/HSliderInterval" to="TypeSelect/Sliders/HSliderInterval/IntervalValue" method="_on_h_slider_interval_value_changed"]
[connection signal="value_changed" from="TypeSelect/Sliders/HSliderGame" to="TypeSelect/Sliders/HSliderGame/GameValue" method="_on_h_slider_game_value_changed"]
